[package]
authors.workspace = true
description = "Quantus Faucet"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "pallet-faucet"
publish = false
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = [
	"aarch64-apple-darwin",
	"wasm32-unknown-unknown",
	"x86_64-unknown-linux-gnu",
]


[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-core = { workspace = true, default-features = false }
sp-keyring = { workspace = true, default-features = false, optional = true }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

hex = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-core/std",
	"sp-keyring/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = []
