[package]
name = "pallet-mining-rewards"
description = "Mining rewards pallet responsible for miner's identification and rewards"
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "wasm32-unknown-unknown"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { optional = true, workspace = true, default-features = false }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
pallet-balances.workspace = true
pallet-treasury.workspace = true
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-consensus-pow.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-consensus-pow/std",
    "pallet-balances/std",
    "pallet-treasury/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
]
