[package]
authors.workspace = true
description = "Mining rewards pallet responsible for miner's identification and rewards"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "pallet-mining-rewards"
publish = false
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = [
	"aarch64-apple-darwin",
	"wasm32-unknown-unknown",
	"x86_64-unknown-linux-gnu",
]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { optional = true, workspace = true, default-features = false }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
pallet-treasury.workspace = true
qp-wormhole.workspace = true
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-consensus-pow.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
pallet-balances.features = ["std"]
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-treasury/std",
	"qp-wormhole/std",
	"scale-info/std",
	"sp-consensus-pow/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
]
