[package]
name = "pallet-qpow"
description = "Quantum POW Pallet"
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "wasm32-unknown-unknown"]

#package = "parity-scale-codec",
[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { optional = true, default-features = false, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
num-traits.workspace = true
pallet-timestamp.workspace = true
qpow-math.workspace = true
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-arithmetic.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
primitive-types.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-benchmarking",
]
try-runtime = [
    "frame-support/try-runtime",
]
