[package]
authors.workspace = true
description = "Quantum POW Pallet"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "pallet-qpow"
publish = false
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = [
	"aarch64-apple-darwin",
	"wasm32-unknown-unknown",
	"x86_64-unknown-linux-gnu",
]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { optional = true, default-features = false, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
hex.workspace = true
log.workspace = true
num-traits.workspace = true
pallet-timestamp.workspace = true
qpow-math.workspace = true
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-arithmetic.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
primitive-types.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"num-traits/std",
	"pallet-timestamp/std",
	"primitive-types/std",
	"qpow-math/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
]
