[package]
authors.workspace = true
description = "FRAME Scheduler pallet"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "pallet-scheduler"
readme = "README.md"
repository.workspace = true
version = "40.1.0"

[dependencies]
codec = { features = ["derive"], workspace = true }
docify.workspace = true
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
qp-scheduler.workspace = true
scale-info = { features = ["derive"], workspace = true }
sp-io.workspace = true
sp-runtime.workspace = true
sp-weights.workspace = true

[dev-dependencies]
pallet-preimage.workspace = true
sp-core.workspace = true
substrate-test-utils.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-weights/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
