[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pallet-wormhole"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
hex = { workspace = true, features = ["alloc"], optional = true }
lazy_static.workspace = true
log.workspace = true
pallet-balances.workspace = true
plonky2.workspace = true
qp-wormhole.workspace = true
scale-info = { workspace = true, default-features = false, features = [
	"derive",
] }
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
wormhole-circuit = { workspace = true, default-features = false, features = [
	"no_std",
] }
wormhole-verifier = { workspace = true, default-features = false, features = [
	"no_random",
	"no_std",
] }
zk-circuits-common = { workspace = true, default-features = false, features = [
	"no_random",
	"no_std",
] }

[dev-dependencies]
hex = { workspace = true, features = ["alloc"] }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex",
	"pallet-balances/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"lazy_static/spin_no_std",
	"pallet-balances/std",
	"qp-wormhole/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"wormhole-verifier/std",
	"zk-circuits-common/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
