[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pallet-wormhole"
repository.workspace = true
version = "0.1.0"

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
hex = { workspace = true, features = ["alloc"], optional = true }
lazy_static.workspace = true
log.workspace = true
pallet-balances.workspace = true
qp-wormhole.workspace = true
qp-wormhole-circuit = { workspace = true, default-features = false }
qp-wormhole-verifier = { workspace = true, default-features = false }
qp-zk-circuits-common = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
] }
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
hex = { workspace = true, features = ["alloc"] }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex",
	"pallet-balances/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"lazy_static/spin_no_std",
	"log/std",
	"pallet-balances/std",
	"qp-wormhole-circuit/std",
	"qp-wormhole-verifier/std",
	"qp-wormhole/std",
	"qp-zk-circuits-common/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
