[package]
authors = ["Quantus Network"]
categories = ["cryptography", "no-std"]
description = "Dilithium post-quantum cryptographic signatures implementation for Substrate"
documentation = "https://docs.rs/qp-dilithium-crypto"
edition = "2021"
homepage = "https://quantus.com"
keywords = [
	"cryptography",
	"dilithium",
	"post-quantum",
	"quantus-network",
	"substrate",
]
license = "MIT"
name = "qp-dilithium-crypto"
readme = "README.md"
repository = "https://github.com/Quantus-Network/chain"
version = "0.1.2"

[dependencies]
codec = { workspace = true, default-features = false }
log = { workspace = true }
qp-poseidon = { workspace = true }
qp-rusty-crystals-dilithium.workspace = true
scale-info = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true

[features]
default = ["std"]
full_crypto = [
	"sp-core/full_crypto",
]
serde = [
	"qp-poseidon/serde",
	"sp-core/serde",
]
std = [
	"codec/std",
	"qp-poseidon/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"thiserror",
]
