[package]
name = "qp-scheduler"
description = "Common primitives for the scheduler pallet and its dependencies"
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
sp-runtime = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"sp-runtime/std",
]
