[package]
authors.workspace = true
description = "Common primitives for the scheduler pallet and its dependencies"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "qp-scheduler"
publish = false
repository.workspace = true
version = "0.1.0"

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"sp-runtime/std",
]
