[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate State Machine"
documentation = "https://docs.rs/sp-state-machine"
edition = "2021"
homepage = "https://paritytech.github.io/polkadot-sdk/"
license = "Apache-2.0"
name = "sp-state-machine"
readme = "README.md"
repository = "https://github.com/paritytech/polkadot-sdk.git"
version = "0.46.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
arbitrary = { features = ["derive"], optional = true, workspace = true }
codec = { workspace = true }
hash-db = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true, optional = true, default-features = true }
rand = { optional = true, workspace = true, default-features = true }
smallvec = { workspace = true, default-features = true }
sp-core = { workspace = true }
sp-externalities = { workspace = true }
sp-panic-handler = { workspace = true, optional = true }
sp-trie = { workspace = true }
thiserror = { optional = true, workspace = true }
tracing = { optional = true, workspace = true }
trie-db = { workspace = true }

[dev-dependencies]
arbitrary = { features = ["derive"], workspace = true }
array-bytes = { workspace = true, default-features = true }
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true, default-features = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
fuzzing = ["arbitrary"]
std = [
	"codec/std",
	"hash-db/std",
	"log/std",
	"parking_lot",
	"rand",
	"sp-core/std",
	"sp-externalities/std",
	"sp-panic-handler",
	"sp-trie/std",
	"thiserror",
	"tracing",
	"trie-db/std",
]
