[package]
authors = [
	"Parity Technologies <admin@parity.io>",
	"Quantus Labs <info@quantus.com>",
]
description = "Patricia trie stuff using a parity-scale-codec node format"
documentation = "https://docs.rs/sp-trie"
edition = "2021"
homepage = "https://paritytech.github.io/polkadot-sdk/"
license = "Apache-2.0"
name = "sp-trie"
readme = "README.md"
repository = "https://github.com/Quantus-Network/zk-trie.git"
version = "40.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
harness = false
name = "bench"

[dependencies]
ahash = { workspace = true, optional = true }
codec = { workspace = true, default-features = false }
foldhash = { workspace = true, default-features = false }
hash-db = { workspace = true, default-features = false }
hashbrown = { workspace = true }
log = { workspace = true, default-features = false }
memory-db = { workspace = true, default-features = false }
nohash-hasher = { workspace = true, optional = true }
parking_lot = { workspace = true, default-features = true, optional = true }
prometheus-endpoint = { optional = true, workspace = true, default-features = true }
rand = { workspace = true, default-features = false, optional = true }
scale-info = { workspace = true, features = [
	"derive",
], default-features = false }
schnellru = { workspace = true, optional = true }
sp-core = { workspace = true, default-features = false }
sp-externalities = { workspace = true, default-features = false }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, default-features = true, optional = true }
trie-db = { workspace = true, default-features = false }
trie-root = { workspace = true, default-features = false }

[dev-dependencies]
array-bytes = { workspace = true, default-features = true }
criterion = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
trie-bench = { workspace = true }
trie-standardmap = { workspace = true }

[features]
default = ["std"]
std = [
	"ahash",
	"codec/std",
	"foldhash/std",
	"hash-db/std",
	"log/std",
	"memory-db/std",
	"nohash-hasher",
	"parking_lot",
	"prometheus-endpoint",
	"rand",
	"scale-info/std",
	"schnellru",
	"sp-core/std",
	"sp-externalities/std",
	"thiserror",
	"tracing",
	"trie-db/std",
	"trie-root/std",
]
