[package]
name = "qp-wormhole"
description = "Common primitives for the wormhole pallet and its dependencies"
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]

[features]
default = ["std"]
std = []
