[package]
authors.workspace = true
description = "PoW consensus algorithm for substrate"
edition.workspace = true
homepage.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-consensus-pow"
readme = "README.md"
repository.workspace = true
version = "0.47.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
codec = { features = ["derive"], workspace = true, default-features = true }
futures = { workspace = true }
futures-timer = { workspace = true }
log = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }
sc-client-api.default-features = true
sc-client-api.workspace = true
sc-consensus.default-features = true
sc-consensus.workspace = true
sp-api.default-features = true
sp-api.workspace = true
sp-block-builder.default-features = true
sp-block-builder.workspace = true
sp-blockchain.default-features = true
sp-blockchain.workspace = true
sp-consensus.default-features = true
sp-consensus.workspace = true
sp-consensus-pow.default-features = true
sp-consensus-pow.workspace = true
sp-core.default-features = true
sp-core.workspace = true
sp-inherents.default-features = true
sp-inherents.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true
thiserror = { workspace = true }
